# linkguard

./: Dockerfile  README.md  docker-compose.yml  linkguard - Shortcut.lnk  pyproject.toml  sqlite_db
Network/: Dockerfile  allow.sh
Network/wireguard2/: wg0.conf
linkguard/cliente/: __init__.py  deamon.py
linkguard/cliente/WG/: ConfiguradorWireguardCliente.py  configGeneratorServer.py
linkguard/controler/: __init__.py
linkguard/orquestador/: Endpoint.py  PrivateNetwork.py  User.py  __main__.py  app.py  db.py  schema.sql  server.py  user_simple.py  usuario.py
linkguard/orquestador/certs/: server.crt  server.key
src/cliente/: deamon.py
src/orquestrador/: __init__.py
src/orquestrador/certs/: server.crt  server.key
wireguard1/: wg0.conf
wireguard3/: wg0.conf
