[tool.poetry]
name = "linkguard"
version = "0.0.1"
description = "A small example package"
authors = ["Natalia Perez <author@example.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9"
flask = "^2.2"
redis = "^5.2.1"
authlib = "^1.0.0"
pyjwt = "^2.0.0" 
requests = "^2.31.0" 
python-dotenv = "^1.0.1"
flask-session = "^0.8.0"
flask-login = "^0.6.3"
oauthlib = "^3.2.2"
requests-oauthlib = "^2.0.0"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.36"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flask-app = "linkguard.orquestador.app:app"